# senstoolkit

./: .gitignore  README.md  pyproject.toml  test.py
doc/: senstoolkit_manual.tex
src/senstoolkit/: __init__.py  analyze.py  cli.py  correlation.py  doe.py  importance.py  morris.py  plotting.py  sobol.py  utils.py
